Fixed gap at top bug

--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -1,8 +1,10 @@
-body {
-    //background: #FFFFFF;
+
+
+html, body, h1 {
     margin: 0;
     padding: 0;
 }
+
 
 div#backgroundimage {
     z-index: -100;
